--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 <div class="container">
 	
 	<!-- HEADER -->
-	<nav class="navbar navbar-inverse">
+	<!-- <nav class="navbar navbar-inverse">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="/">Add/Remove Users</a>
 		</div>
@@ -37,7 +37,7 @@
 			<li><a href="/late">Mark users late</a></li>
 			<li><a href="/stats">Late Count Statistics</a></li>
 		</ul>
-	</nav>
+	</nav> -->
 
 	<!-- ANGULAR DYNAMIC CONTENT -->
 	<div ng-view></div>
