--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 	<script src="js/controllers/LateCtrl.js"></script>
 	<script src="js/controllers/StatsCtrl.js"></script>
 	<script src="js/controllers/UserCtrl.js"></script>
-	<script src="js/services/NerdService.js"></script>
-	<script src="js/services/GeekService.js"></script>
+	<script src="js/services/UserService.js"></script>
+	<script src="js/services/StatsService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 </head>
@@ -29,15 +29,15 @@
 <div class="container">
 	
 	<!-- HEADER -->
-	<!-- <nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-inverse">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/">Add/Remove Users</a>
+			<a class="navbar-brand" href="/">Home Page</a>
 		</div>
-		<ul class="nav navbar-nav">
+		<!-- <ul class="nav navbar-nav">
 			<li><a href="/late">Mark users late</a></li>
 			<li><a href="/stats">Late Count Statistics</a></li>
-		</ul>
-	</nav> -->
+		</ul> -->
+	</nav>
 
 	<!-- ANGULAR DYNAMIC CONTENT -->
 	<div ng-view></div>
